engine-net-2/examples/Errors/SubgraphTypeErrorCompiled.grg
#include "Rules.grg"

sequence s1
{
	i:int=42 ;> i.r(null)
}
